--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-Hello world
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <title>Allan Sandoval's Portfolio</title>
+</head>
+<body>
+<nav>
+    <ul>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Estudios</a></li>
+        <li><a href="#">Experiencia</a></li>
+        <li><a href="#">Contacto</a></li>
+    </ul>
+    <div class="menu-bars">
+        <input type="checkbox">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+</nav>
+<div>
+    <span>A</span>
+    <span>L</span>
+    <span>L</span>
+    <span>A</span>
+    <span>N </span>
+
+    <span> S</span>
+    <span>A</span>
+    <span>N</span>
+    <span>D</span>
+    <span>O</span>
+    <span>V</span>
+    <span>A</span>
+    <span>L</span>
+</div>
+<footer class="footer">
+    <p>Todos los derechos reservados © 2022 Allan Sandoval </p>
+</footer>
+<script src="app.js"></script>
+</body>
+</html>
