agregada foto de peril

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <span></span>
     </div>
 </nav>
+<img src="assets/FOTO%20PERFIL.png" alt="Foto perfil">
 <div>
     <span>A</span>
     <span>L</span>
