edicion en foto perfil

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <li><a href="#">Experiencia</a></li>
         <li><a href="#">Contacto</a></li>
     </ul>
-    <div class="menu-bars">
+    <div class="menu-bars">git
         <input type="checkbox">
         <span></span>
         <span></span>
         <span></span>
     </div>
 </nav>
-<img src="assets/FOTO%20PERFIL.png" alt="Foto perfil">
+<img src="assets/fotoperfil.png" alt="Foto perfil">
 <div>
     <span>A</span>
     <span>L</span>
